--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -28,10 +28,10 @@
   </div>
 
   <ng-container *ngIf="dashboardSummary?.obrasRecentes as obrasRecentes">
-    <div *ngIf="obrasRecentes.length > 0" class="recent-works">
+    <div *ngIf="obrasRecentes.length > 0" class="card recent-works">
       <h3>Obras Recentes</h3>
       <div class="work-list">
-        <div *ngFor="let obra of obrasRecentes" class="work-item" [routerLink]="['/obras', obra.id]">
+        <div *ngFor="let obra of obrasRecentes" class="card work-item" [routerLink]="['/obras', obra.id]">
           <h4>{{ obra.nome }}</h4>
           <p>Localização: {{ obra.localizacao }}</p>
           <p>Status: {{ getStatusName(obra.status) }}</p>
