--- a/src/app/works/diarios/diario-list/diario-list.component.html
+++ b/src/app/works/diarios/diario-list/diario-list.component.html
@@ -4,7 +4,7 @@
   <div *ngIf="loading" class="loading-message">Processando...</div>
   <div *ngIf="error" class="error-message">{{ error }}</div>
 
-  <div class="diario-form">
+  <div class="card diario-form">
     <h4>Adicionar Novo Diário</h4>
     <form (ngSubmit)="addDiario()">
       <div class="form-group">
@@ -23,7 +23,7 @@
         <label for="atividades">Atividades</label>
         <textarea id="atividades" name="atividades" [(ngModel)]="newDiario.atividades"></textarea>
       </div>
-      <button type="submit" class="btn-add">Adicionar Diário</button>
+      <button type="submit" class="btn-primary">Adicionar Diário</button>
     </form>
   </div>
 
@@ -33,8 +33,8 @@
       <li *ngFor="let diario of diarios">
         <span>{{ diario.data | date:'shortDate' }} - Clima: {{ diario.clima }}</span>
         <div>
-          <button (click)="viewDiarioDetails(diario.id)" class="btn-view">Ver Detalhes</button>
-          <button (click)="deleteDiario(diario.id)" class="btn-delete">Excluir</button>
+          <button (click)="viewDiarioDetails(diario.id)" class="btn-info">Ver Detalhes</button>
+          <button (click)="deleteDiario(diario.id)" class="btn-danger">Excluir</button>
         </div>
       </li>
     </ul>
@@ -47,7 +47,7 @@
   <!-- Diario Details Modal/Section -->
   <div *ngIf="currentDiarioDetalhes" class="diario-details-modal">
     <div class="modal-content">
-      <button class="close-button" (click)="closeDiarioDetails()">X</button>
+      <button class="btn-close" (click)="closeDiarioDetails()">X</button>
       <h4>Detalhes do Diário de {{ currentDiarioDetalhes.data | date:'shortDate' }}</h4>
       <p><strong>Clima:</strong> {{ currentDiarioDetalhes.clima }}</p>
       <p><strong>Colaboradores:</strong> {{ currentDiarioDetalhes.colaboradores }}</p>
@@ -56,12 +56,12 @@
       <h5>Fotos</h5>
       <div class="form-group">
         <input type="text" [(ngModel)]="newFotoUrl" placeholder="URL da nova foto">
-        <button (click)="addFoto(currentDiarioDetalhes.id)" class="btn-add-small">Adicionar Foto</button>
+        <button (click)="addFoto(currentDiarioDetalhes.id)" class="btn-primary btn-small">Adicionar Foto</button>
       </div>
       <div class="photos-grid">
         <div *ngFor="let foto of currentDiarioDetalhes.fotos" class="photo-item">
           <img [src]="foto.url" alt="Foto do Diário">
-          <button (click)="deleteFoto(currentDiarioDetalhes.id, foto.id)" class="btn-delete-small">X</button>
+          <button (click)="deleteFoto(currentDiarioDetalhes.id, foto.id)" class="btn-danger btn-small">X</button>
         </div>
       </div>
       <p *ngIf="!currentDiarioDetalhes.fotos || currentDiarioDetalhes.fotos.length === 0">Nenhuma foto.</p>
@@ -69,12 +69,12 @@
       <h5>Comentários</h5>
       <div class="form-group">
         <textarea [(ngModel)]="newComentarioTexto" placeholder="Novo comentário"></textarea>
-        <button (click)="addComentario(currentDiarioDetalhes.id)" class="btn-add-small">Adicionar Comentário</button>
+        <button (click)="addComentario(currentDiarioDetalhes.id)" class="btn-primary btn-small">Adicionar Comentário</button>
       </div>
       <ul>
         <li *ngFor="let comentario of currentDiarioDetalhes.comentarios">
           <span><strong>{{ comentario.autorNome }}</strong> ({{ comentario.data | date:'short' }}): {{ comentario.texto }}</span>
-          <button (click)="deleteComentario(currentDiarioDetalhes.id, comentario.id)" class="btn-delete-small">X</button>
+          <button (click)="deleteComentario(currentDiarioDetalhes.id, comentario.id)" class="btn-danger btn-small">X</button>
         </li>
       </ul>
       <p *ngIf="!currentDiarioDetalhes.comentarios || currentDiarioDetalhes.comentarios.length === 0">Nenhum comentário.</p>
