--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -1,5 +1,5 @@
 <div class="login-container">
-  <div class="login-card">
+  <div class="card login-card">
     <img src="assets/logoMP.png" alt="MP Logo" class="logo">
     <h2>Login</h2>
     <form (ngSubmit)="onLogin()">
@@ -11,7 +11,7 @@
         <label for="password">Senha</label>
         <input type="password" id="password" name="password" [(ngModel)]="loginData.password" required>
       </div>
-      <button type="submit" class="btn-login">Entrar</button>
+      <button type="submit" class="btn-primary">Entrar</button>
       <p *ngIf="errorMessage" class="error-message">{{ errorMessage }}</p>
       <a href="#" class="forgot-password">Esqueceu a senha?</a>
       <a [routerLink]="['/register']" class="register-link">Não tem uma conta? Cadastre-se</a>
