--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -14,7 +14,7 @@
       </nav>
     </div>
     <div class="header__logout">
-      <button (click)="logout()">Logout</button>
+      <button (click)="logout()" class="btn-logout">Logout</button>
     </div>
   </div>
 </header>
