--- a/src/app/shared/header/header.component.scss
+++ b/src/app/shared/header/header.component.scss
@@ -20,9 +20,9 @@
   }
 
   &__logo {
-    margin-right: 2rem;
+    margin-right: 1rem;
     img {
-      height: 40px;
+      height: 60px;
     }
   }
 
@@ -34,15 +34,24 @@
       padding: 0;
 
       li {
-        margin: 0 1rem;
+        margin: 0 0.4rem;
 
         a {
           text-decoration: none;
-          color: #333;
+          color: #e53935; /* Red text for non-active links */
           font-weight: 500;
+          padding: 0.5rem 1rem; /* Add padding to make them look like buttons */
+          border-radius: 8px; /* Rounded corners */
+          transition: all 0.3s ease; /* Smooth transition */
+
+          &:hover {
+            background-color: rgba(229, 57, 53, 0.1); /* Light red background on hover */
+          }
 
           &.active {
-            color: #007bff;
+            background-color: #e53935; /* Red background for active link */
+            color: #fff; /* White text for active link */
+            box-shadow: 0 2px 4px rgba(0,0,0,0.1); /* Subtle shadow */
           }
         }
       }
@@ -50,13 +59,5 @@
   }
 
   &__logout {
-    button {
-      background-color: #007bff;
-      color: #fff;
-      border: none;
-      padding: 0.5rem 1rem;
-      border-radius: 0.25rem;
-      cursor: pointer;
-    }
   }
 }
