--- a/src/app/works/checklists/checklist-list/checklist-list.component.html
+++ b/src/app/works/checklists/checklist-list/checklist-list.component.html
@@ -4,7 +4,7 @@
   <div *ngIf="loading" class="loading-message">Processando...</div>
   <div *ngIf="error" class="error-message">{{ error }}</div>
 
-  <div class="checklist-form">
+  <div class="card checklist-form">
     <h4>Adicionar Novo Checklist</h4>
     <form (ngSubmit)="addChecklist()">
       <div class="form-group">
@@ -15,18 +15,18 @@
           </option>
         </select>
       </div>
-      <button type="submit" class="btn-add">Adicionar Checklist</button>
+      <button type="submit" class="btn-primary">Adicionar Checklist</button>
     </form>
   </div>
 
-  <div *ngIf="checklists && checklists.length > 0" class="checklists-display">
+  <div *ngIf="checklists && checklists.length > 0" class="card checklists-display">
     <h4>Checklists Registrados</h4>
     <ul>
       <li *ngFor="let checklist of checklists">
         <span>Checklist de {{ getChecklistTypeName(checklist.tipo) }}</span>
         <div>
-          <button (click)="viewChecklistDetails(checklist.id)" class="btn-view">Ver Detalhes</button>
-          <button (click)="deleteChecklist(checklist.id)" class="btn-delete">Excluir</button>
+          <button (click)="viewChecklistDetails(checklist.id)" class="btn-info">Ver Detalhes</button>
+          <button (click)="deleteChecklist(checklist.id)" class="btn-danger">Excluir</button>
         </div>
       </li>
     </ul>
@@ -38,20 +38,20 @@
 
   <!-- Checklist Details Modal/Section -->
   <div *ngIf="currentChecklistDetalhes" class="checklist-details-modal">
-    <div class="modal-content">
-      <button class="close-button" (click)="closeChecklistDetails()">X</button>
+    <div class="card modal-content">
+      <button class="btn-close" (click)="closeChecklistDetails()">X</button>
       <h4>Detalhes do Checklist de {{ getChecklistTypeName(currentChecklistDetalhes.tipo) }}</h4>
 
       <h5>Itens do Checklist</h5>
       <div class="form-group">
         <input type="text" [(ngModel)]="newChecklistItemName" placeholder="Nome do novo item">
-        <button (click)="addItem(currentChecklistDetalhes.id)" class="btn-add-small">Adicionar Item</button>
+        <button (click)="addItem(currentChecklistDetalhes.id)" class="btn-primary btn-small">Adicionar Item</button>
       </div>
       <ul>
         <li *ngFor="let item of currentChecklistDetalhes.itens">
           <input type="checkbox" [(ngModel)]="item.concluido" (change)="updateItemStatus(currentChecklistDetalhes.id, item)">
           <span>{{ item.nome }}</span>
-          <button (click)="deleteItem(currentChecklistDetalhes.id, item.id)" class="btn-delete-small">X</button>
+          <button (click)="deleteItem(currentChecklistDetalhes.id, item.id)" class="btn-danger btn-small">X</button>
         </li>
       </ul>
       <p *ngIf="!currentChecklistDetalhes.itens || currentChecklistDetalhes.itens.length === 0">Nenhum item no checklist.</p>
