--- a/src/app/works/documentos/documento-list/documento-list.component.html
+++ b/src/app/works/documentos/documento-list/documento-list.component.html
@@ -4,7 +4,7 @@
   <div *ngIf="loading" class="loading-message">Processando...</div>
   <div *ngIf="error" class="error-message">{{ error }}</div>
 
-  <div class="documento-form">
+  <div class="card documento-form">
     <h4>Adicionar Novo Documento</h4>
     <form (ngSubmit)="addDocumento()">
       <div class="form-group">
@@ -23,11 +23,11 @@
           </option>
         </select>
       </div>
-      <button type="submit" class="btn-add">Adicionar Documento</button>
+      <button type="submit" class="btn-primary">Adicionar Documento</button>
     </form>
   </div>
 
-  <div *ngIf="documentos && documentos.length > 0" class="documentos-display">
+  <div class="card documentos-display">
     <h4>Documentos Registrados</h4>
     <ul>
       <li *ngFor="let documento of documentos">
