style: cards-de-informacoes-do-dashboard

--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -1,6 +1,6 @@
 <div class="login-container">
   <div class="card login-card">
-    <img src="assets/logoMP.png" alt="MP Logo" class="logo">
+    <img src="img/logoMP.png" alt="MP Logo" class="logo">
     <h2>Login</h2>
     <form (ngSubmit)="onLogin()">
       <div class="form-group">
