--- a/src/app/auth/register/register.component.html
+++ b/src/app/auth/register/register.component.html
@@ -1,6 +1,6 @@
 <div class="register-container">
   <div class="card register-card">
-    <img src="assets/logoMP.png" alt="MP Logo" class="logo">
+    <img src="img/logoMP.png" alt="MP Logo" class="logo">
     <h2>Cadastro</h2>
     <form (ngSubmit)="onRegister()">
       <div class="form-group">
