--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -3,7 +3,7 @@
     <div class="header__left">
       <div class="header__logo">
         <a routerLink="/dashboard">
-          <img src="assets/logoMP.png" alt="Logo">
+          <img src="img/logoMP.png" alt="Logo">
         </a>
       </div>
       <nav class="header__nav">
