--- a/src/app/shared/header/header.component.scss
+++ b/src/app/shared/header/header.component.scss
@@ -56,6 +56,12 @@
     }
   }
 
-  &__logout {
-  }
 }
+
+.btn-logout{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 8px;
+}
+
