feat: pagina-de-criacao-de-obras

--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -68,7 +68,7 @@
         <h2>Obras Recentes</h2>
         <p>Acompanhe o progresso das obras em andamento</p>
       </div>
-      <button><img src="img/plusIcon.svg" alt=""> Nova Obra</button>
+      <button [routerLink]="['/obras/criar']"><img src="img/plusIcon.svg" alt=""> Nova Obra</button>
       </div>
       
       <div class="work-list">
