--- a/src/app/works/obra-create/obra-create.component.html
+++ b/src/app/works/obra-create/obra-create.component.html
@@ -30,6 +30,10 @@
       <input id="coordenadorNome" formControlName="coordenadorNome" placeholder="Nome do Coordenador">
     </div>
     <div class="form-group">
+      <label for="administradorNome">Nome do Administrador</label>
+      <input id="administradorNome" formControlName="administradorNome" placeholder="Nome do Administrador">
+    </div>
+    <div class="form-group">
       <label for="responsavelTecnicoNome">Nome do Responsável Técnico</label>
       <input id="responsavelTecnicoNome" formControlName="responsavelTecnicoNome" placeholder="Nome do Responsável Técnico">
     </div>
@@ -44,6 +48,10 @@
     <div class="form-group">
       <label for="dataTermino">Data de Término</label>
       <input id="dataTermino" type="date" formControlName="dataTermino">
+    </div>
+    <div class="form-group">
+      <label for="observacoes">Observações</label>
+      <textarea id="observacoes" formControlName="observacoes" placeholder="Observações"></textarea>
     </div>
     <div class="form-group">
       <label for="status">Status</label>
