--- a/src/app/works/obra-create/obra-create.component.scss
+++ b/src/app/works/obra-create/obra-create.component.scss
@@ -36,7 +36,8 @@ label {
 }
 
 input,
-select {
+select,
+textarea {
   width: 100%;
   padding: 0.75rem;
   border: 1px solid #ccc;
@@ -46,7 +47,8 @@ select {
 }
 
 input:focus,
-select:focus {
+select:focus,
+textarea:focus {
   border-color: #ef4444;
   outline: none;
   box-shadow: 0 0 0 3px rgba(239, 68, 68, 0.2);
